Entity class added to Game project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,10 @@ set(OPTIMIZATION_LEVEL  -Og)
 
 add_executable(${PROJECT_NAME}  main.cpp)
 
-#add_subdirectory(Core/Game)
+add_subdirectory(Core/Game)
 
-#target_link_libraries(${PROJECT_NAME}   PRIVATE     Game
-#)
+target_link_libraries(${PROJECT_NAME}   PRIVATE     Game
+)
 
-target_compile_options(${PROJECT_NAME}  PRIVATE     ${FLAGS} ${OPTIMIZATION_LEVEL})
-set_target_properties(${PROJECT_NAME}   PROPERTIES  CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
+target_compile_options(${PROJECT_NAME}  PRIVATE     ${FLAGS}    ${OPTIMIZATION_LEVEL})
+set_target_properties(${PROJECT_NAME}   PROPERTIES  CXX_STANDARD 20     CXX_STANDARD_REQUIRED ON)
