--- a/Core/Graphics/CMakeLists.txt
+++ b/Core/Graphics/CMakeLists.txt
@@ -2,11 +2,13 @@ set(target_name Graphics)
 
 set(${target_name}_src  Renderable.cpp
                         ShapeRenderable.cpp
-                        Circle.cpp)
+                        Circle.cpp
+                        KeyboardController.cpp)
 
 set(${target_name}_hpp  Renderable.hpp
                         ShapeRenderable.hpp
-                        Circle.hpp)
+                        Circle.hpp
+                        KeyboardController.hpp)
 
 set(SFML_LIB    sfml-graphics
                 sfml-window
