--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(${PROJECT_NAME}  main.cpp)
 
 add_subdirectory(Core/Game)
 add_subdirectory(Core/Graphics)
+add_subdirectory(Core/Tests)
 
 target_link_libraries(${PROJECT_NAME}   PRIVATE     Game
                                                     Graphics
