--- a/Core/Graphics/CMakeLists.txt
+++ b/Core/Graphics/CMakeLists.txt
@@ -3,11 +3,13 @@ set(target_name Graphics)
 set(${target_name}_src  Renderable.cpp
                         ShapeRenderable.cpp
                         Circle.cpp
+                        Rectangle.cpp
                         KeyboardController.cpp)
 
 set(${target_name}_hpp  Renderable.hpp
                         ShapeRenderable.hpp
                         Circle.hpp
+                        Rectangle.hpp
                         KeyboardController.hpp)
 
 set(SFML_LIB    sfml-graphics
