Findinig closestsPipes added, not tested yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,7 @@ add_subdirectory(Core/Tests)
 
 target_link_libraries(${PROJECT_NAME}   PRIVATE     Game
                                                     Graphics
-                                                    Gameplay
-)
+                                                    Gameplay)
 
 target_compile_options(${PROJECT_NAME}  PRIVATE     ${FLAGS}    ${OPTIMIZATION_LEVEL})
 set_target_properties(${PROJECT_NAME}   PROPERTIES  CXX_STANDARD 20     CXX_STANDARD_REQUIRED ON)
