Tests added for gameplay

--- a/Core/Tests/CMakeLists.txt
+++ b/Core/Tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(GMOCK_LIBRARIES /usr/lib/libgmock.a /usr/lib/libgmock_main.a)
 add_executable(${target_name} ${${target_name}_src})
 
 target_link_libraries(${target_name}    PRIVATE     Game
+                                                    Gameplay
                                                     ${GTEST_LIBRARIES}
                                                     ${GMOCK_LIBRARIES})
 
