Text added. GetClosestPipes(Behind) and update points methods fixed. Tested manually. UT updated

--- a/Core/Graphics/CMakeLists.txt
+++ b/Core/Graphics/CMakeLists.txt
@@ -5,7 +5,8 @@ set(${target_name}_src  Renderable.cpp
                         Circle.cpp
                         Rectangle.cpp
                         Pipes.cpp
-                        KeyboardController.cpp)
+                        KeyboardController.cpp
+                        Text.cpp)
 
 set(SFML_LIB    sfml-graphics
                 sfml-window
