--- a/Core/Game/CMakeLists.txt
+++ b/Core/Game/CMakeLists.txt
@@ -5,6 +5,7 @@ set(${target_name}_src  Timer.cpp
                         Moveable.cpp
                         Bird.cpp
                         Pipes.cpp
+                        GameUtils.cpp
                         Environment.cpp
                         Collision.cpp)
 
@@ -13,6 +14,7 @@ set(${target_name}_hpp  Timer.hpp
                         Moveable.hpp
                         Bird.hpp
                         Pipes.hpp
+                        GameUtils.hpp
                         Environment.hpp
                         Collision.hpp)
 
