WriteHeader works and tested

--- a/Core/Tests/CMakeLists.txt
+++ b/Core/Tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(${target_name} ${${target_name}_src})
 
 target_link_libraries(${target_name}    PRIVATE     Game
                                                     Gameplay
+                                                    DataProcessor
                                                     ${GTEST_LIBRARIES}
                                                     ${GMOCK_LIBRARIES})
 
