--- a/Core/DataProcessor/CMakeLists.txt
+++ b/Core/DataProcessor/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(target_name DataProcessor)
 
-set(${target_name}_src     CSVDataExporter.cpp)
+set(${target_name}_src     DataExporter.cpp)
 
 add_library(${target_name}  STATIC  ${${target_name}_src})
 
-target_link_libraries(${target_name}    PUBLICGame Graphics)
+target_link_libraries(${target_name}    PUBLIC      Game)
 target_compile_options(${target_name}   PRIVATE     ${FLAGS} ${OPTIMIZATION_LEVEL})
 set_target_properties(${target_name}    PROPERTIES  CXX_STANDARD 20     CXX_STANDARD_REQUIRED ON)
 
