--- a/Core/Gameplay/CMakeLists.txt
+++ b/Core/Gameplay/CMakeLists.txt
@@ -2,6 +2,7 @@ set(target_name Gameplay)
 
 set(${target_name}_src      Timer.cpp
                             CoreGameplay.cpp
+                            DataProvider.cpp
                             Gameplay.cpp)
 
 add_library(${target_name}  STATIC  ${${target_name}_src})
