--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,12 @@ add_subdirectory(Core/Graphics)
 add_subdirectory(Core/DataProcessor)
 add_subdirectory(Core/Gameplay)
 add_subdirectory(Core/Tests)
+add_subdirectory(UI)
 
 target_link_libraries(${PROJECT_NAME}   PRIVATE     Game
                                                     Graphics
-                                                    Gameplay)
+                                                    Gameplay
+                                                    UI)
 
 target_compile_options(${PROJECT_NAME}  PRIVATE     ${FLAGS}    ${OPTIMIZATION_LEVEL})
 set_target_properties(${PROJECT_NAME}   PROPERTIES  CXX_STANDARD 20     CXX_STANDARD_REQUIRED ON)
