--- a/MachineLearning/CMakeLists.txt
+++ b/MachineLearning/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(target_name MachineLearning)
 
-set(${target_name}_src      )
+set(${target_name}_src      Environment.hpp)
 
 add_library(${target_name}  STATIC  ${${target_name}_src})
 
