Added CV display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(Core/Gameplay)
 add_subdirectory(Core/Tests)
 add_subdirectory(UI)
 add_subdirectory(MachineLearning)
+add_subdirectory(ComputerVision)
 
 target_link_libraries(${PROJECT_NAME}   PRIVATE     Game
                                                     Graphics
