--- a/UI/CMakeLists.txt
+++ b/UI/CMakeLists.txt
@@ -8,12 +8,13 @@ set(CMAKE_AUTOUIC ON)
 set(${target_name}_src      Button.cpp
                             StartButton.cpp
                             StartAIGameButton.cpp
+                            StartCVSessionButton.cpp
                             UI.cpp)
 
 add_library(${target_name}  STATIC  ${${target_name}_src})
 
 target_link_libraries(${target_name}    PUBLIC      Qt6::Widgets Qt6::Core Qt6::Gui
-                                        PRIVATE     Game Graphics Gameplay AIDrivenFlappyBird)
+                                        PRIVATE     Game Graphics Gameplay AIDrivenFlappyBird ComputerVision)
                                         
 target_compile_options(${target_name}   PRIVATE     ${FLAGS} ${OPTIMIZATION_LEVEL})
 set_target_properties(${target_name}    PROPERTIES  CXX_STANDARD 20     CXX_STANDARD_REQUIRED ON)
